# ebird-recommend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  serve.py
.github/workflows/: deploy-frontend.yml
docs/: feature-hotspot-detail.md
ebird_recommend/api/: app.py  deps.py
ebird_recommend/cli/: app.py
ebird_recommend/core/: cache.py  client.py  models.py  recommender.py  user_data.py
frontend/: .env.production  package-lock.json  vite.config.ts
frontend/src/: App.vue  api.ts  main.ts  store.ts  style.css  types.ts
frontend/src/components/: RecommendForm.vue  ResultsTable.vue  SettingsPanel.vue
frontend/src/views/: HomeView.vue  HotspotDetailView.vue
